--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)' --recursive",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "chai-immutable": "^1.5.3",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.6",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
